crates/cribo/tests/snapshots/bundled_code@xfail_stickytape_script_using_from_to_import_module.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_script_using_from_to_import_module/main.py
---
message = "Hello"
from greetings import greeting
print(greeting.message)
