crates/cribo/tests/snapshots/bundled_code@xfail_stickytape_script_with_dynamic_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_script_with_dynamic_import/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# Preserved imports
import importlib

# ─ Entry Module: main ─
import importlib
greeting = importlib.import_module("greeting")
print(greeting.message)
