crates/cribo/tests/snapshots/bundled_code@xfail_stickytape_script_with_special_shebang.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_script_with_special_shebang/main.py
---
#!/usr/bin/python3 -E

import sys

print(sys.flags.ignore_environment)
