crates/cribo/tests/snapshots/bundled_code@xfail_stickytape_single_file.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_single_file/main.py
---
#!/usr/bin/env python

print("Hello")
