crates/cribo/tests/snapshots/bundled_code@xfail_stickytape_single_file_using_stdlib.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_single_file_using_stdlib/main.py
---
#!/usr/bin/env python

import hashlib

print(hashlib.sha1(b"Hello").hexdigest())
